Added registration label and fixed edit order

--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -29,7 +29,7 @@
 {% block content %}
    <!-- BEGIN MIDDLE LAYOUT -->
    <div id="layout-middle" class="col-md-9 col-sm-9">
-    <h1 class="page-title">Create an account</h1>
+    <h1 class="page-title">Create new account</h1>
     <div class="col-md-8 col-sm-8">
      <form action="{% url 'registration' %}" method="post" id="registration-form" class="form-horizontal">
        {% csrf_token %}
