--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -93,7 +93,7 @@
      </div>
 	 
      <div class="form-group {% if form.spacing.errors %}has-error{% endif %}">
-      <label class="col-sm-5 control-label">Type of Paper Needed</label>
+      <label class="col-sm-5 control-label">Spacing</label>
       <div class="col-sm-5">
        <select name="spacing" class="form-control" onchange="displayPrice();">
          {% for val in co.SPACING %}
